@@ -211,7 +211,7 @@ static int dbd_sqlite_query(apr_dbd_t * sql, int *nrows, const char *query)
 static const char *dbd_sqlite_escape(apr_pool_t * pool, const char *arg,
                                      apr_dbd_t * sql)
 {
-    char *ret = sqlite_mprintf(arg);
+    char *ret = sqlite_mprintf("%q", arg);
     apr_pool_cleanup_register(pool, ret, (void *) sqlite_freemem,
                               apr_pool_cleanup_null);
     return ret;
